--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#bcefdd",
-    "activityBar.background": "#bcefdd",
+    "activityBar.activeBackground": "#f8d4a4",
+    "activityBar.background": "#f8d4a4",
     "activityBar.foreground": "#15202b",
     "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#be7ee0",
-    "activityBarBadge.foreground": "#15202b",
+    "activityBarBadge.background": "#0b9459",
+    "activityBarBadge.foreground": "#e7e7e7",
     "commandCenter.border": "#15202b99",
-    "sash.hoverBorder": "#bcefdd",
-    "statusBar.background": "#93e5c8",
+    "sash.hoverBorder": "#f8d4a4",
+    "statusBar.background": "#f4be75",
     "statusBar.foreground": "#15202b",
-    "statusBarItem.hoverBackground": "#6adbb3",
-    "statusBarItem.remoteBackground": "#93e5c8",
+    "statusBarItem.hoverBackground": "#f0a846",
+    "statusBarItem.remoteBackground": "#f4be75",
     "statusBarItem.remoteForeground": "#15202b",
-    "titleBar.activeBackground": "#93e5c8",
+    "titleBar.activeBackground": "#f4be75",
     "titleBar.activeForeground": "#15202b",
-    "titleBar.inactiveBackground": "#93e5c899",
+    "titleBar.inactiveBackground": "#f4be7599",
     "titleBar.inactiveForeground": "#15202b99"
   },
-  "peacock.color": "#93e5c8"
+  "peacock.color": "#f4be75"
 }
