Did some stuff also peacock

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,5 @@
     "titleBar.inactiveBackground": "#f4be7599",
     "titleBar.inactiveForeground": "#15202b99"
   },
-  "peacock.color": "#f4be75"
+  "peacock.color": "#fffff"
 }
